Add comboboxes for account fields
