# backend/openapi.json
@@ -82,18 +82,10 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "accounts": {
-                      "type": "array",
-                      "items": {
-                        "type": "string"
-                      }
-                    }
-                  },
-                  "required": [
-                    "accounts"
-                  ]
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
                 }
               }
             }
@@ -135,18 +127,22 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "categories": {
-                      "type": "array",
-                      "items": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "name": {
+                        "type": "string"
+                      },
+                      "account_mapping": {
                         "type": "string"
                       }
-                    }
-                  },
-                  "required": [
-                    "categories"
-                  ]
+                    },
+                    "required": [
+                      "name",
+                      "account_mapping"
+                    ]
+                  }
                 }
               }
             }
